gap b/w english and USD has fixed

--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -39,13 +39,15 @@ header {
             height: 40px;
             ul {
                 height: 40px;
+                
                 li {
                     height: 40px;
                     padding-top: 10px;
                     a {
                         padding-top: 0px;
                         padding-bottom: 0px;
-                        color: $support_color_light_one
+                        padding-left: 10px;
+                        color: $support_color_light_one;
                     }
                 }
             }
@@ -60,6 +62,9 @@ header {
             }
             .search_ddl_head{
                 margin:0 0 0;
+            }
+            .button-ddl-head{
+                width: 173px;
             }
             .btn,
             input[type=text] {
@@ -82,6 +87,7 @@ header {
             height: 30px;
             padding-top: 10px;
             ul {
+                margin-left: -6px;
                 height: 30px;
                 li {
                     height: 30px;
